--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>TravelTip</title>
 </head>
-<body>
+<body >
     <h1>TravelTip Starter</h1>
-    <div id="map" style="width: 100%; height: 400px;"></div>
+    <div class="container">
+        <div id="map"></div>
+        <div class="location-list">
+        </div>
+    </div>
+    
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
