--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>TravelTip</title>
 </head>
 <body >
-    <h1>TravelTip Starter</h1>
+    <header>
+        <h1>TravelTip Starter</h1>
+        <div class="search">
+            <input type="text" class="search-input" placeholder="Enter a location">
+            <button onclick="onGetUserPos()" class="btn-user-pos">My location</button>
+        </div>
+    </header>
+    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
+    <!-- <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button> -->
+    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
     <div class="container">
         <div id="map"></div>
         <div class="location-list">
         </div>
     </div>
-    
-    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
-    <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
-    <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
-    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
 
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: 
