--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <pre class="locs"></pre>
     </p>
     
-
+<script src="lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
 </body>
 </html>
