--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body >
     <header>
-        <h1>TravelTip Starter</h1>
+        <h1>TravelTip</h1>
         <div class="search">
             <input type="text" class="search-input" onchange="onSearch(this.value)" placeholder="Enter a location">
             <button onclick="onGetUserPos()" class="btn-user-pos">My location</button>
@@ -23,10 +23,6 @@
         </div>
     </div>
 
-    <p>You are at: <span class="user-pos"></span></p>
-    <p>Locations: 
-        <pre class="locs"></pre>
-    </p>
     
 <script src="lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
